--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@ body,
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: white) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
